# email_bot

./: README.md  how to use email boy.docx
email_bot/: .gitignore  pyproject.toml
email_bot/email_bot/: __init__.py  campaigns.py  cli.py  config.py  db.py  gmail_provider.py  rate_limit.py  recipients.py  reporting.py  templating.py  utils.py
email_bot/examples/: recipients.json
email_bot/templates/example_campaign/: body.html  body.txt  subject.txt
